Hierarchical Model Checking: Refactoring